Update styles to fix dark mode

--- a/packages/core/styles/pdf_viewer.css
+++ b/packages/core/styles/pdf_viewer.css
@@ -9,6 +9,7 @@
 }
 
 .pdfSlick {
+    color-scheme: light;
     scrollbar-color: rgba(0, 0, 0, 0.2) rgba(0, 0, 0, 0);
     scrollbar-width: thin;
 }
